--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 23px;
+  font-size: 24px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   transition: background-color 2s ease;
 }
@@ -20,9 +20,7 @@
   border-radius: 13px;
   background-color: white;
   gap: 1.3em;
-  transition: background-color 2s ease;
-  
-
+  transition: all 2s ease;
 }
 
 #text {
@@ -31,7 +29,7 @@
 }
 
 #author {
-  font-size: 0.8em;
+  font-size: 1em;
   width: 100%;
   text-align: right;
   transition: color 2s ease;
@@ -49,13 +47,18 @@
   cursor: pointer ;
 }
 
-.botones-redes-svg {
-  width: 50px;
-  height: 50px;
+.botones__redes{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.zonaColoreada{
-  transition: fill 2s ease;
+
+
+.react-icon{
+  transition: color 2s ease;
+  width: 45px;
+  height: 45px;
 }
 
 .botones__img{
